--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,20 +10,29 @@
     border-radius: 10px;
     box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
     border: 2px solid black;
+    padding: 15px;
 }
-.valor-carta-sobre-simbolo{
-    font-size: 50px;
+.contenedor-superior{
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+}
+.valor-superior{
+    position: absolute;
+    font-size: 40px;
     display: flex;
     justify-content: start;
     color: red;
-    margin-left: 15px;
+    margin-left: 22px;
 }
 .simbolo-superior{
+    margin-top: 20px;
     font-size: 100px;
     display: flex;
     justify-content: start;
     color: red;
-    margin-left: 15px;
+    margin-left: 13px;
+    gap: 0;
 }
 .valor-carta{
     font-size: 100px;
@@ -32,12 +41,30 @@
     align-items: center;
     color: red;
 }
+.contenedor-inferior{
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+}
+.valor-inferior{
+    position: absolute;
+    font-size: 40px;
+    rotate: 180deg;
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    color: red;
+    margin-top: 82px;
+    margin-left: 395px;
+    
+}
 .simbolo-inferior{
     font-size: 100px;
     display: flex;
     justify-content: start;
     color: red;
     rotate: 180deg;
+    margin-bottom: 20px;
     margin-right: 15px;
 
 }
@@ -47,6 +74,16 @@
     justify-content: center;
 }
 .boton-generar{
+    background-color: blueviolet;
+    color: white;
     font-size: 40px;
-    
+    border-radius: 5px;
+    border: none;
+    padding: 10px;
+    transition: 1s;
+    cursor: pointer;
+}
+.boton-generar:hover{
+    color: black;
+    background-color: chartreuse;
 }
