--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,28 @@
+*{
+    font-family: Quicksand;
+}
+.contenedorContador{
+    margin: auto;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+.mensaje-actualizando{
+    margin: auto;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    font-size: 40px;
+    margin-top: 30px;
+}
+#cuentaRegresiva{
+    color: red;
+}
 
 .card{
     margin: auto;
-    margin-top: 100px;
+    margin-top: 50px;
     height: 600px;
     width: 450px;
     display: flex;
